ERP ::: update index file

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -27,7 +27,7 @@
 <div id="wrapper">
 
 <!------------------------------------------------------ keep header here ---------------------------------------------->
-                                            <div ng-include="'hr-header.html'"></div>
+                                            <div ng-include="'header.html'"></div>
 <!------------------------------------------------------ --------------------------------------------------------------->
 
 <div class="main">
@@ -182,9 +182,9 @@
             <!-- /widget-header -->
             <div class="widget-content">
               <div class="shortcuts"> 
-	              <a href="javascript:;" class="shortcut"><i class="shortcut-icon icon-user"></i><span class="shortcut-label">Users</span> </a>
+	              <a href="searchUser.html" class="shortcut"><i class="shortcut-icon icon-user"></i><span class="shortcut-label">Users</span> </a>
+	              <a href="searchPosition.html" class="shortcut"><i class="shortcut-icon icon-picture"></i><span class="shortcut-label">Positions</span> </a>
 	              <a href="javascript:;" class="shortcut"><i class="shortcut-icon icon-signal"></i> <span class="shortcut-label">Reports</span> </a>
-	              <a href="javascript:;" class="shortcut"><i class="shortcut-icon icon-comment"></i><span class="shortcut-label">Comments</span> </a>
 	              <a href="javascript:;" class="shortcut"><i class="shortcut-icon icon-file"></i><span class="shortcut-label">Notes</span> </a>
              </div>
               <!-- /shortcuts --> 
