--- a/src/main/webapp/footer.html
+++ b/src/main/webapp/footer.html
@@ -1,5 +1,4 @@
-
-<div class="footer">
+<center><div class="footer">
   <div class="footer-inner">
     <div class="container">
       <div class="row">
@@ -13,3 +12,4 @@
   <!-- /footer-inner --> 
 </div>
 <!-- /footer --> 
+</center>
