Add Success/Error Message and redesign createPosition

--- a/src/main/webapp/position.html
+++ b/src/main/webapp/position.html
@@ -38,10 +38,10 @@
                                             <div ng-include="'header.html'"></div>
 <!------------------------------------------------------ --------------------------------------------------------------->
 
-              <center><h1><b>Position Management</b></h1><br>
               
+              <center>
               	<div ng-view>
-              	</div></center><br><br><br>
+              	</div></center>
     </body>
 </html> 	         	
 
