--- a/src/main/webapp/searchPosition.html
+++ b/src/main/webapp/searchPosition.html
@@ -8,6 +8,7 @@
 <script src="lib/angular/js/ng-grid-1.3.2.js"></script>
 <script src="lib/utility/js/jquery-1.11.2.min.js"></script>
 <script src="lib/angular/js/ng-grid.debug.js"></script>
+<script src="js/position/searchPosition.js"></script>
 <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="lib/angular/css/ng-grid.css" />
 <link href="lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
@@ -24,7 +25,10 @@
    
 </head>
 <body>
-
+<h1><b>Position Management - Search</b></h1><br>
+<!-- 			<div class="alert alert-success" role="alert"></div> -->
+<!-- 			<div class="alert alert-info" role="alert">...</div> -->
+			<div style="width:990px;" class="alert alert-danger" role="alert" ng-hide="errorHide">{{errorMsg}}</div>
             <div class="form-container"><br>
       <form action="#" name="createPosition" onvalidate>
               	<form id="integerForm" role="form" class="form-horizontal">
@@ -46,6 +50,11 @@
 				<td>
 				<a id="rsBtn" href="#createPosition" class="btn btn-info btn-lg">
          		 <span class="glyphicon glyphicon-plus" style="position:aboslute;top:1px;"></span> Create
+       			 </a>
+				</td>
+				<td>
+				<a id="approveBtn" href="" class="btn btn-info btn-lg" ng-disabled="approveBtnDisable">
+         		 <span class="glyphicon glyphicon-ok" style="position:aboslute;top:1px;"></span> Approve
        			 </a>
 				</td>
 				</tr>		
