--- a/src/main/webapp/position.html
+++ b/src/main/webapp/position.html
@@ -15,6 +15,7 @@
 <script src="lib/angular/js/angular-route.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/position/searchPosition.js"></script>
+<script type="text/javascript" src="js/position/editPosition.js"></script>
 <script type="text/javascript" src="js/position/createPosition.js"></script>
 <link href="lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="lib/angular/css/ng-tags-input.min.css">
