Use Glyphicons everywhere, fix ngGrid colums and redesign editPosition

--- a/src/main/webapp/position.html
+++ b/src/main/webapp/position.html
@@ -47,7 +47,7 @@
 </html> 	         	
 
 <!------------------------------------------------------ keep footer here ---------------------------------------------->
-                                            <div ng-include="'footer.html'">footer</div>
+                                            <div id="footer" ng-include="'footer.html'">footer</div>
 <!----------------------------------------------------------------------- ---------------------------------------------->
 
 
