Add Validation on searchPosition and Update CSS and Buttons

--- a/src/main/webapp/createPosition.html
+++ b/src/main/webapp/createPosition.html
@@ -159,13 +159,15 @@
 				<tr>
 				<td></td>
 				<td id="tdid" class="tableTd">
-				<input type="button" class="btn btn-info" ng-click="submit()" value=Register name="post" align="center" style="color: fff;"  />
+				<a href="" class="btn btn-info btn-lg" ng-click="submit()">
+         		 <span class="glyphicon glyphicon-ok-circle"></span> Register
+       			 </a>
 				<a href="#pos" class="btn btn-info btn-lg">
          		 <span class="glyphicon glyphicon-remove"></span> Cancel
        			 </a>
 				</td>
 				</tr>
-				
+	
               	</table>
             	</form>
             </form>
