--- a/src/main/webapp/searchPosition.html
+++ b/src/main/webapp/searchPosition.html
@@ -28,7 +28,7 @@
 <h1><b>Position Management - Search</b></h1><br>
 <!-- 			<div class="alert alert-success" role="alert"></div> -->
 <!-- 			<div class="alert alert-info" role="alert">...</div> -->
-			<div style="width:990px;" class="alert alert-danger" role="alert" ng-hide="errorHide">{{errorMsg}}</div>
+			<div style="width:1050px;" class="alert alert-danger" role="alert" ng-hide="errorHide"><p style="font-size:3ex;"><b>{{errorMsg}}</b></p></div>
             <div class="form-container"><br>
       <form action="#" name="createPosition" onvalidate>
               	<form id="integerForm" role="form" class="form-horizontal">
@@ -37,13 +37,13 @@
               	<tr><td>
               	<div class="ui-widget control-group"
 							ng-class="{ 'has-error' : searchPosition.designations.$invalid && !searchPosition.designations.$pristine }">
-								<input name="designations" class="form-control input-sm" ng-change="changeEvent()" 
+								<input name="designations" class="form-control input-sm" ng-change="searchDisable=false;disableSearch()" 
 								style="position:absolute;top:34px;"
 								id="designations" ng-model="searchPosition.designations" placeholder="Enter Designation" required> <span
 								ng-show="searchPosition.designations.$invalid  && !searchPosition.designations.$pristine"
 								class="help-block" style="font: black">Designation is Required.</span>
 						</div></td><td>
-					<a href="" id="searchBtn" class="btn btn-info btn-lg" ng-click="searchPosition()">
+					<a href="" id="searchBtn" ng-disabled="searchDisable" class="btn btn-info btn-lg" ng-click="searchPosition()">
          		 <span class="glyphicon glyphicon-search" style="position:aboslute;top:1px;"></span> Search
        			 </a>
 				</td>
