--- a/src/main/webapp/createPosition.html
+++ b/src/main/webapp/createPosition.html
@@ -25,11 +25,11 @@
 <h1><b>Position Management - Create</b></h1><br>
 <!-- ----------------------------------alert Message--------------------------------------------------------- -->
             <div class="bs-example">
-               <div class="alert alert-success" style="display:none" id="success-alert">
+               <div style="width:1050px;display:none" class="alert alert-success" id="success-alert">
 	               <a href="" class="close" data-dismiss="alert">&times;</a>
-	               <strong>Success!</strong> Your message has been sent successfully.
+	               <strong>Success!</strong> Position Details Stored Successfully!
                </div>
-               <div class="alert alert-danger" style="display:none" id="fail-alert">
+               <div style="width:1050px;display:none" class="alert alert-danger" id="fail-alert">
 	               <a href="" class="close" data-dismiss="alert">&times;</a>
 	               <strong>Failed!</strong> Try again.
                </div>
@@ -51,7 +51,7 @@
               	<div class="control-group" ng-class="{'has-error' :createPosition.designation.$invalid && !createPosition.designation.$pristine}">
 								<label class="lbl" for="name">Designation*:</label></td>
 
-				<td class="tableTd"><select name="designation" ng-change="changeDesignation()" placeholder="Select Designation"
+				<td class="tableTd"><select name="designation" ng-change="changeDesignation();changeEvent()" placeholder="Select Designation"
 									ng-model="selectedDesignation" ng-options = "o as o for o in options" class="form-control input-sm" id="designation" required style="color: black"></select>
 									</div>
 				</td>
@@ -61,7 +61,7 @@
 								<label class="lbl" for="jobcode">Job Code*:</label></td>
 								<td>
 								<input type="text" name="jobcode"
-									class="form-control input-sm" id="jobcode" ng-change="changeEvent()" 
+									class="form-control input-sm" id="jobcode" ng-disabled="jbDisabled" ng-change="changeEvent()" 
 									ng-model="position.jobcode" placeholder="Enter Job Code" required>
 									</td>
 				</div>
@@ -82,7 +82,7 @@
 				<td id="tdid" class="tableTd"><div class="control-group" >
 						<label class="lbl" for="primarySkills">Primary Skills*:</label></td>
 						<td id="tdid">
-						<tags-input ng-model="position.primarySkills" class="field-control" placeholder="Enter Skills"> <auto-complete id="sk"
+						<tags-input ng-model="position.primarySkills" ng-change="changeEvent()" class="field-control" placeholder="Enter Skills"> <auto-complete id="sk"
 							source="loadTags($query)" class="field-control"></auto-complete> </tags-input>
 							</td>
 						</div>
@@ -148,10 +148,13 @@
 								<label class="lbl" for="name">Client :</label>
 				</td>	
 				<td id="tdid" class="tableTd">
-				<input type="text" name="client" ng-change="changeEvent()" 
+				<select name="location" ng-change="changeEvent()" placeholder="Select Client"
+									ng-model="selectedClient" ng-options = "o as o for o in clients" class="form-control input-sm" id="location" required style="color: black">
+								</select>
+				<!-- <input type="text" name="client" ng-change="changeEvent()" 
 									class="form-control input-sm" id="client" ng-model="position.client"
 									ng-pattern="/^[a-zA-Z _]*$/" 
-									placeholder="Enter Client" required>
+									placeholder="Enter Client" required> -->
 				</td><td></td><td></td></tr>	
 				<tr><td></td><td><span ng-show="createPosition.client.$invalid  && !createPosition.client.$pristine"
 									class="help-block">Enter Correct Client.</span>
@@ -159,7 +162,7 @@
 				<tr>
 				<td></td>
 				<td id="tdid" class="tableTd">
-				<a href="" class="btn btn-info btn-lg" ng-click="submit()">
+				<a href="" class="btn btn-info btn-lg" ng-click="submit()" ng-disabled="disableRegister">
          		 <span class="glyphicon glyphicon-ok-circle"></span> Register
        			 </a>
 				<a href="#pos" class="btn btn-info btn-lg">
