--- a/src/main/webapp/searchPosition.html
+++ b/src/main/webapp/searchPosition.html
@@ -38,22 +38,22 @@
               	<div class="ui-widget control-group"
 							ng-class="{ 'has-error' : searchPosition.designations.$invalid && !searchPosition.designations.$pristine }">
 								<input name="designations" class="form-control input-sm" ng-change="searchDisable=false;disableSearch()" 
-								style="position:absolute;top:34px;"
+								style="position:absolute;top:35px;"
 								id="designations" ng-model="searchPosition.designations" placeholder="Enter Designation" required> <span
 								ng-show="searchPosition.designations.$invalid  && !searchPosition.designations.$pristine"
 								class="help-block" style="font: black">Designation is Required.</span>
 						</div></td><td>
-					<a href="" id="searchBtn" ng-disabled="searchDisable" class="btn btn-info btn-lg" ng-click="searchPosition()">
+					<a href="" id="searchBtn" ng-disabled="searchDisable" class="btn btn-success" ng-click="searchPosition()">
          		 <span class="glyphicon glyphicon-search" style="position:aboslute;top:1px;"></span> Search
        			 </a>
 				</td>
 				<td>
-				<a id="rsBtn" href="#createPosition" class="btn btn-info btn-lg">
+				<a id="rsBtn" href="#createPosition" class="btn btn-success">
          		 <span class="glyphicon glyphicon-plus" style="position:aboslute;top:1px;"></span> Create
        			 </a>
 				</td>
 				<td>
-				<a id="approveBtn" href="" class="btn btn-info btn-lg" ng-disabled="approveBtnDisable">
+				<a id="approveBtn" href="" class="btn btn-success" ng-disabled="approveBtnDisable">
          		 <span class="glyphicon glyphicon-ok" style="position:aboslute;top:1px;"></span> Approve
        			 </a>
 
