--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -37,7 +37,7 @@
         <li><a href="#"><i class="icon-list-alt"></i><span>Reports</span> </a> </li>
         <li><a href="#"><i class="icon-bar-chart"></i><span>Charts</span> </a> </li>
         <li><a href="position.html#/pos"><i class="icon-bar-chart"></i><span>Position</span> </a> </li>
-        <li><a href="#pos"><span style="margin-top:15px;" class="glyphicon glyphicon-user"></span> <p style="margin-top:5px;font">Profile</p></a></li>
+        <li><a href="profile.html#pro"><span style="margin-top:15px;" class="glyphicon glyphicon-user"></span> <p style="margin-top:5px;font">Profile</p></a></li>
         <!-- <li><a href="profile.html"><i class="icon-bar-chart"></i><span>Profile</span> </a> </li> -->
         <li><a href="user.html"><i class="icon-bar-chart"></i><span>User</span> </a> </li>
         <!-- <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-long-arrow-down"></i><span>Drops</span> <b class="caret"></b></a>
