--- a/src/main/webapp/profile.html
+++ b/src/main/webapp/profile.html
@@ -15,8 +15,8 @@
 <script src="lib/angular/js/angular-route.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/profile/searchProfile.js"></script>
-<!-- <script type="text/javascript" src="js/position/editPosition.js"></script>
-<script type="text/javascript" src="js/position/createPosition.js"></script> -->
+<!-- <script type="text/javascript" src="js/position/editPosition.js"></script> -->
+<script type="text/javascript" src="js/profile/createProfile.js"></script>
 <link href="lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="lib/angular/css/ng-tags-input.min.css">
 <script src="lib/bootstrap/js/ng-tags-input.min.js"></script>
