--- a/src/main/webapp/profile.html
+++ b/src/main/webapp/profile.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <script src="lib/angular/js/angular.min.js"></script>
+<script src="lib/angular/js/angular-file-upload-shim.min.js"></script>
+<script src="lib/angular/js/angular-file-upload.js"></script>
 <script src="lib/angular/js/ng-grid-1.3.2.js"></script>
 <script src="lib/utility/js/jquery-1.11.2.min.js"></script>
 <script src="lib/bootstrap/js/bootstrap.js"></script>
