--- a/src/main/webapp/position.html
+++ b/src/main/webapp/position.html
@@ -7,6 +7,8 @@
 <script src="lib/angular/js/angular.min.js"></script>
 <script src="lib/angular/js/ng-grid-1.3.2.js"></script>
 <script src="lib/utility/js/jquery-1.11.2.min.js"></script>
+<script src="lib/angular/js/angular-file-upload-shim.min.js"></script>
+<script src="lib/angular/js/angular-file-upload.js"></script>
 <script src="lib/bootstrap/js/bootstrap.js"></script>
 <script src="lib/angular/js/ng-grid.debug.js"></script>
 <!-- <script src="lib/angular/js/ng-grid-flexible-height.js"></script> -->
