--- a/src/main/webapp/createProfile.html
+++ b/src/main/webapp/createProfile.html
@@ -7,15 +7,17 @@
 <script src="lib/angular/js/angular.min.js"></script>
 <script src="lib/bootstrap/js/bootstrap.js"></script>
 <script src="lib/utility/js/jquery-1.11.2.min.js"></script>
+<link href="lib/angular/css/angular-block-ui.min.css" rel="stylesheet">
+<script src="js/masks.js"></script>
 <script src="lib/angular/js/angular-file-upload-shim.min.js"></script>
 <script src="lib/angular/js/angular-file-upload.js"></script>
+<script src="lib/angular/js/angular-block-ui.min.js"></script>
 <script src="js/profile/createProfile.js"></script>
 <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-<script type="text/javascript" src="js/profile//createProfile.js"></script>
 <link href="lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 <link href="static/css/home.css" rel="stylesheet">
 <link href="lib/bootstrap/font/google_font.css" rel="stylesheet">
-<link href="lib/bootstrap/font/font-awesome.css" rel="stylesheet">
+<link href="lib/bootstrap/font/font-awesome.min.css" rel="stylesheet">
 <link href="static/css/style.css" rel="stylesheet">
 <link href="static/css/dashboard.css" rel="stylesheet">
 <script src="lib/bootstrap/js/bootstrap.js"></script>
@@ -129,10 +131,10 @@
 							<label class="lbl" for="mobileNo">MobileNo*:</label>
 								</td>
 				<td id="tdid" class="tableTd">
-				<input type="number" ng-change="toggleProDisable()" 
+				<input type="text" ng-change="toggleProDisable()" maxlength="15"
 								ng-model="candidate.mobileNo" name="mobileNo" id="mobileNo"
-								ngPattern="1234567890 " ng-maxlength="10" class="form-control"
-								placeholder="Enter mobileNo" required>
+								ngPattern="1234567890 " class="form-control"
+								placeholder="Enter mobileNo" ui-br-phone-number required>
 									</div></td>
 				<td id="tdid" class="tableTd">
 				<div class="control-group"
@@ -165,10 +167,10 @@
 							<label class="lbl" for="altmobileNo">Alt. MobileNo:</label>
 				</td>
 				<td id="tdid" class="tableTd">
-				<input type="number" ng-change="changeEvent()" 
+				<input type="text" ng-change="changeEvent()" 
 								ng-model="candidate.altmobileNo" name="altmobileNo" id="altmobileNo"
-								ngPattern="1234567890 " ng-maxlength="10" class="form-control"
-								placeholder="Enter Alt Mobile No." required>
+								ngPattern="1234567890 " ng-maxlength="15" class="form-control"
+								placeholder="Enter Alt Mobile No." ui-br-phone-number required>
 									</div>
 				</td>
 				<td id="tdid" class="tableTd">
@@ -310,6 +312,7 @@
 				<td id="tdid" class="tableTd">
 				</td>
 				<td id="tdid" class="tableTd">
+				<input type="button" value="Block!!!" ng-click="startBlock()" />
 				</td>
 				</tr>
               	</table>
@@ -317,10 +320,7 @@
             	</form>
             </form>
             </div>
-
           </div>
-         
-         
          </div>
         <!-- /span12 --> 
       </div>
