--- a/src/main/webapp/position.html
+++ b/src/main/webapp/position.html
@@ -25,7 +25,7 @@
 <link href="static/css/home.css" rel="stylesheet">
 <!-- <link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600"
         rel="stylesheet"> -->
-<link href="lib/bootstrap/font/font-awesome.css" rel="stylesheet">
+<link href="lib/bootstrap/font/font-awesome.min.css" rel="stylesheet">
 <link href="static/css/style.css" rel="stylesheet">
 <link href="static/css/dashboard.css" rel="stylesheet">
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
