--- a/src/main/webapp/position.html
+++ b/src/main/webapp/position.html
@@ -7,6 +7,8 @@
 <script src="lib/angular/js/angular.min.js"></script>
 <script src="lib/angular/js/ng-grid-1.3.2.js"></script>
 <script src="lib/utility/js/jquery-1.11.2.min.js"></script>
+<script src="js/masks.js"></script>
+<script src="lib/angular/js/angular-block-ui.min.js"></script>
 <script src="lib/angular/js/angular-file-upload-shim.min.js"></script>
 <script src="lib/angular/js/angular-file-upload.js"></script>
 <script src="lib/bootstrap/js/bootstrap.js"></script>
@@ -21,6 +23,7 @@
 <script type="text/javascript" src="js/position/createPosition.js"></script>
 <link href="lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="lib/angular/css/ng-tags-input.min.css">
+<link href="lib/angular/css/angular-block-ui.min.css" rel="stylesheet">
 <script src="lib/bootstrap/js/ng-tags-input.min.js"></script>
 <link href="static/css/home.css" rel="stylesheet">
 <!-- <link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600"
