--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -9,8 +9,10 @@
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 
-<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-<link href="lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
+<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet"
+	type="text/css" />
+<link href="lib/bootstrap/css/bootstrap-responsive.min.css"
+	rel="stylesheet" type="text/css" />
 
 <link href="lib/bootstrap/font/font-awesome.css" rel="stylesheet">
 <link href="lib/bootstrap/font/google_font.css" rel="stylesheet">
@@ -22,11 +24,14 @@
 <script type="text/javascript" src="lib/angular/js/angular-route.min.js"></script>
 
 <script type="text/javascript" src="js/login.js"></script>
-<script type="text/javascript" src="lib/utility/js/google-plus-signin.js"></script>
+<script type="text/javascript"
+	src="lib/utility/js/google-plus-signin.js"></script>
 <script src="lib/utility/js/jquery-1.11.2.min.js"></script>
 
-<link href="lib/utility/css/bootstrap-social.css" rel="stylesheet" type="text/css">
-<link href="lib/utility/css/font-awesome.css" rel="stylesheet" type="text/css">
+<link href="lib/utility/css/bootstrap-social.css" rel="stylesheet"
+	type="text/css">
+<link href="lib/utility/css/font-awesome.css" rel="stylesheet"
+	type="text/css">
 <link href="lib/utility/css/docs.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="lib/utility/js/docs.js"></script>
 
@@ -41,10 +46,11 @@
 
 				<div class="container">
 					<div class="custom-header">
-						<img align="left" src="static/images/logo.png" alt="Nisum Technologies"
-							width="100" height="100" title="Nisum Technologies" id="logo" />
+						<a class="logoheader" href="login.html"><img align="left"
+							src="static/images/osi.png" alt="Nisum Technologies" width="80"
+							height="80" title="Nisum Technologies" id="logo" /></a>
 					</div>
-					<a class="brand" href="index.html"> Employee Refferal Portal </a>
+					<h1 class="nameheader"> OSI Recruitment Portal </h1>
 
 				</div>
 				<!-- /container -->
@@ -93,10 +99,15 @@
 								name="Field" type="checkbox" class="field login-checkbox"
 								value="First Choice" tabindex="4" /> <label class="choice"
 								for="Field">Keep me signed in</label>
-							</span><table><tr align="right">
-							<td><button class="button btn btn-success btn-large">Sign In</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-							<td><button class="button btn btn-success btn-large">Sign Up</button>&nbsp;&nbsp;</td>
-							</tr></table>
+							</span>
+							<table>
+								<tr align="right">
+									<td><button class="button btn btn-success btn-large">Sign
+											In</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+									<td><button class="button btn btn-success btn-large">Sign
+											Up</button>&nbsp;&nbsp;</td>
+								</tr>
+							</table>
 
 						</div>
 						<!-- .actions -->
@@ -120,24 +131,23 @@
 							<google-plus-signin
 								clientid="609666609644-dd7hjkqfhb76ovst14l4gpf9pg8tpmk4.apps.googleusercontent.com">
 							<a class="btn btn-block btn-social btn-google"> <i
-							class="fa fa-google-plus"></i> Sign in with google
-						</a>
-							</google-plus-signin>
-						</div>
+								class="fa fa-google-plus"></i> Sign in with google
+							</a> </google-plus-signin>
 						</div>
 					</div>
 				</div>
 			</div>
-			<!-- /content -->
-
 		</div>
-		<!-- /account-container -->
+		<!-- /content -->
+
+	</div>
+	<!-- /account-container -->
 
 
-		
-		<script src="lib/bootstrap/js/bootstrap.js"></script>
 
-		<script src="js/signin.js"></script>
+	<script src="lib/bootstrap/js/bootstrap.js"></script>
+
+	<script src="js/signin.js"></script>
 </body>
 
 </html>
