--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -1,46 +1,54 @@
-<div class="navbar navbar-fixed-top" style="margin-bottom:0px">
-  <div class="navbar-inner">
-    <div class="container"> <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span
-                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span> </a>
-                    <a class="brand" href="#">ERP</a>
-      <div class="nav-collapse">
-        <ul class="nav pull-right">
-          <!-- <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
-                            class="icon-cog"></i> Account <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="javascript:;">Settings</a></li>
-              <li><a href="javascript:;">Help</a></li>
-            </ul>
-          </li> -->
-          <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown"><i
-                            class="icon-user"></i> Account<b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="javascript:;">Profile</a></li>
-              <li><a href="logout.html">Logout</a></li>
-            </ul>
-          </li>
-        </ul>
-       
-      </div>
-      <!--/.nav-collapse --> 
-    </div>
-    <!-- /container --> 
-  </div>
-  <!-- /navbar-inner --> 
+<div class="navbar navbar-fixed-top" style="margin-bottom: 0px">
+	<div class="navbar-inner">
+
+		<div class="container">
+			<div class="custom-header">
+				<a class="logoheader" href="index.html"><img align="left"
+					src="static/images/osi.png" alt="Nisum Technologies" width="80"
+					height="70" title="Nisum Technologies" id="logo" /> </a><br> <br>
+				<br>
+				<h1 class="nameheader"> OSI Recruitment Portal</h1>
+				<div class="nav-collapse">
+					<ul class="nav pull-right">
+						<li class="dropdown"><b class="acc"><a href="" class="dropdown-toggle" 
+							data-toggle="dropdown" ><i class="glyphicon glyphicon-user" style="padding-right: 7px;"></i>Account
+							<b class="caret"></b></a>
+							<ul class="dropdown-menu">
+								<li><a href="javascript:;">Profile</a></li>
+								<li><a href="logout.html">Logout</a></li>
+							</ul></b></li>
+					</ul>
+					
+				</div>
+			</div>
+
+
+		</div>
+		<!-- /container -->
+
+	</div>
 </div>
+
 <!-- /navbar -->
 <div class="subnavbar">
-  <div class="subnavbar-inner">
-    <div class="container">
-      <ul class="mainnav">
-        <li class="active"><a href="index.html"><i class="icon-dashboard"></i><span>Dashboard</span> </a> </li>
-        <li><a href="#"><i class="icon-list-alt"></i><span>Reports</span> </a> </li>
-        <li><a href="#"><i class="icon-bar-chart"></i><span>Charts</span> </a> </li>
-        <li><a href="position.html#/pos"><i class="icon-bar-chart"></i><span>Position</span> </a> </li>
-        <li><a href="profile.html#pro"><span style="margin-top:15px;" class="glyphicon glyphicon-user"></span> <p style="margin-top:5px;font">Profile</p></a></li>
-        <!-- <li><a href="profile.html"><i class="icon-bar-chart"></i><span>Profile</span> </a> </li> -->
-        <li><a href="user.html"><i class="icon-bar-chart"></i><span>User</span> </a> </li>
-        <!-- <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-long-arrow-down"></i><span>Drops</span> <b class="caret"></b></a>
+	<div class="subnavbar-inner">
+		<div class="container">
+			<ul class="mainnav">
+				<li class="active"><a href="index.html"><i
+						class="icon-dashboard"></i><span>Dashboard</span> </a></li>
+				<li><a href="#"><i class="icon-list-alt"></i><span>Reports</span>
+				</a></li>
+				<li><a href="#"><i class="icon-bar-chart"></i><span>Charts</span>
+				</a></li>
+				<li><a href="position.html#/pos"><i class="icon-bar-chart"></i><span>Position</span>
+				</a></li>
+				<li><a href="profile.html#pro"><span
+						style="margin-top: 15px;" class="glyphicon glyphicon-user"></span>
+						<p style="margin-top: 5px;">Profile</p></a></li>
+				<!-- <li><a href="profile.html"><i class="icon-bar-chart"></i><span>Profile</span> </a> </li> -->
+				<li><a href="user.html"><i class="icon-bar-chart"></i><span>User</span>
+				</a></li>
+				<!-- <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-long-arrow-down"></i><span>Drops</span> <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="icons.html">Icons</a></li>
             <li><a href="faq.html">FAQ</a></li>
@@ -50,10 +58,10 @@
             <li><a href="error.html">404</a></li>
           </ul>
         </li> -->
-      </ul>
-    </div>
-    <!-- /container --> 
-  </div>
-  <!-- /subnavbar-inner --> 
+			</ul>
+		</div>
+		<!-- /container -->
+	</div>
+	<!-- /subnavbar-inner -->
 </div>
 <!-- /subnavbar -->
