Changes in editPosition, editProfile and related controller,service

--- a/src/main/webapp/profile.html
+++ b/src/main/webapp/profile.html
@@ -20,7 +20,7 @@
 <script src="lib/angular/js/angular-route.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/profile/searchProfile.js"></script>
-<!-- <script type="text/javascript" src="js/position/editPosition.js"></script> -->
+<script type="text/javascript" src="js/profile/editProfile.js"></script>
 <script type="text/javascript" src="js/profile/createProfile.js"></script>
 <link href="lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="lib/angular/css/ng-tags-input.min.css">
