Updating Page Alignments

--- a/src/main/webapp/createPosition.html
+++ b/src/main/webapp/createPosition.html
@@ -23,7 +23,7 @@
     <![endif]-->
 </head>
 <body>
-<h1><b>Position Management - Create</b></h1><br>
+<h2 class="headerclass"><b>Position Management - Create</b></h2>
 <!-- ----------------------------------alert Message--------------------------------------------------------- -->
             <div class="bs-example">
                <div style="width:1050px;display:none" class="alert alert-success" id="success-alert">
@@ -42,7 +42,7 @@
             <input type="text" name="jobcode" ng-hide="true"
 									class="form-control input-sm" id="jobcode" ng-disabled="jbDisabled" ng-change="changeEvent()" 
 									ng-model="position.jobcode" placeholder="Enter Job Code" required>
-            <div class="form-container"><br>
+            <div class="createposition-container"><br>
          
  
            <form action="#" name="createPosition" onvalidate>
