--- a/src/main/webapp/createProfile.html
+++ b/src/main/webapp/createProfile.html
@@ -23,7 +23,7 @@
 <script src="lib/bootstrap/js/bootstrap.js"></script>
 </head>
 <body>
-<h1><b>Profile Management - Create</b></h1><br>
+<h2 class="headerclass"><b>Profile Management - Create</b></h2>
 <!-- ----------------------------------alert Message--------------------------------------------------------- -->
             <div class="bs-example">
                <div style="width:990px;display:none" class="alert alert-success" id="success-alert">
@@ -36,16 +36,7 @@
                </div>
                
 <!-- ----------------------------------alert Message--------------------------------------------------------- -->
-<div id="wrapper">
-<center>
-<div class="main">
-  <div class="main-inner">
-    <div class="container">
-      <div class="row">
-        <div class="span12">
-        
-       <div class="widget widget-table action-table">
-            <div class="form-container"><br>
+            <div class="createprofile-container"><br>
 
            <form action="#" name="CreateCandidate" onvalidate>
               	<form id="integerForm" role="form" class="form-horizontal">
