--- a/src/main/webapp/searchPosition.html
+++ b/src/main/webapp/searchPosition.html
@@ -25,11 +25,11 @@
    
 </head>
 <body>
-<h1><b>Position Management - Search</b></h1><br>
+<h2 class="headerclass"><b>Position Management - Search</b></h2>
 <!-- 			<div class="alert alert-success" role="alert"></div> -->
 <!-- 			<div class="alert alert-info" role="alert">...</div> -->
 			<div style="width:1050px;" class="alert alert-danger" role="alert" ng-hide="errorHide"><p style="font-size:3ex;"><b>{{errorMsg}}</b></p></div>
-            <div class="form-container"><br>
+            <div class="searchposition-container"><br>
       <form action="#" name="createPosition" onvalidate>
               	<form id="integerForm" role="form" class="form-horizontal">
               	<table border="0" cellpadding="4">
