Change Header and Footer CSS

--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -4,18 +4,18 @@
 		<div class="container">
 			<div class="custom-header">
 				<a class="logoheader" href="index.html"><img align="left"
-					src="static/images/osi.png" alt="Nisum Technologies" width="80"
-					height="70" title="Nisum Technologies" id="logo" /> </a><br> <br>
+					src="static/images/osi.png" alt="Nisum Technologies" width="70"
+					height="60" title="Nisum Technologies" id="logo" /> </a><br> <br>
 				<br>
 				<h1 class="nameheader"> OSI Recruitment Portal</h1>
 				<div class="nav-collapse">
 					<ul class="nav pull-right">
 						<li class="dropdown"><b class="acc"><a href="" class="dropdown-toggle" 
-							data-toggle="dropdown" ><i class="glyphicon glyphicon-user" style="padding-right: 7px;"></i>Account
+							data-toggle="dropdown" style="text-decoration: none;" ><i class="glyphicon glyphicon-user"></i>&nbsp;Account
 							<b class="caret"></b></a>
 							<ul class="dropdown-menu">
-								<li><a href="javascript:;">Profile</a></li>
-								<li><a href="logout.html">Logout</a></li>
+								<li><a href="javascript:;"><i class="glyphicon glyphicon-user"></i>&nbsp;&nbsp;Profile</a></li>
+								<li><a href="logout.html"><i class="glyphicon glyphicon-off"></i>&nbsp;&nbsp;Logout</a></li>
 							</ul></b></li>
 					</ul>
 					
