--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -44,11 +44,11 @@
 
 			<div class="navbar-inner">
 
-				<div class="container">
+				<div class="container" style="padding: 32px 0 34px 0;">
 					<div class="custom-header">
 						<a class="logoheader" href="login.html"><img align="left"
-							src="static/images/osi.png" alt="Nisum Technologies" width="80"
-							height="80" title="Nisum Technologies" id="logo" /></a>
+							src="static/images/osi.png" alt="Nisum Technologies" width="70"
+							height="60" title="Nisum Technologies" id="logo" /></a>
 					</div>
 					<h1 class="nameheader"> OSI Recruitment Portal </h1>
 
