--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -34,20 +34,23 @@
 	<div class="subnavbar-inner">
 		<div class="container">
 			<ul class="mainnav">
-				<li class="active"><a href="index.html"><i
+				<li class="active"><a ui-sref="main"><i
 						class="icon-dashboard"></i><span>Dashboard</span> </a></li>
 				<li><a href="#"><i class="icon-list-alt"></i><span>Reports</span>
 				</a></li>
 				<li><a href="#"><i class="icon-bar-chart"></i><span>Charts</span>
 				</a></li>
-				<li><a href="position.html#/pos"><i class="icon-bar-chart"></i><span>Position</span>
+				<li><a href=""><i class="icon-bar-chart"></i><span>Position</span>
 				</a></li>
-				<li><a href="profile.html#pro"><span
+				<li><a ui-sref="searchProfile"><span
 						style="margin-top: 15px;" class="glyphicon glyphicon-user"></span>
 						<p style="margin-top: 5px;">Profile</p></a></li>
 				<!-- <li><a href="profile.html"><i class="icon-bar-chart"></i><span>Profile</span> </a> </li> -->
-				<li><a href="user.html"><i class="icon-bar-chart"></i><span>User</span>
+				<li><a href=""><i class="icon-bar-chart"></i><span>User</span>
 				</a></li>
+				<li><a href=""><span
+						style="margin-top: 15px;" class="glyphicon glyphicon-phone-alt"></span>
+						<p style="margin-top: 5px;">Interview</p></a></li>
 				<!-- <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-long-arrow-down"></i><span>Drops</span> <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="icons.html">Icons</a></li>
