Update Delete Functionality

--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -40,7 +40,7 @@
 				</a></li>
 				<li><a href="#"><i class="icon-bar-chart"></i><span>Charts</span>
 				</a></li>
-				<li><a href=""><i class="icon-bar-chart"></i><span>Position</span>
+				<li><a ui-sref="searchPosition"><i class="icon-bar-chart"></i><span>Position</span>
 				</a></li>
 				<li><a ui-sref="searchProfile"><span
 						style="margin-top: 15px;" class="glyphicon glyphicon-user"></span>
