--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -23,6 +23,9 @@
 <script type="text/javascript" src="js/profile/searchProfile.js"></script>
 <script type="text/javascript" src="js/profile/editProfile.js"></script>
 <script type="text/javascript" src="js/profile/createProfile.js"></script>
+<script type="text/javascript" src="js/position/searchPosition.js"></script>
+<script type="text/javascript" src="js/position/editPosition.js"></script>
+<script type="text/javascript" src="js/position/createPosition.js"></script>
 <link href="lib/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="lib/angular/css/ng-tags-input.min.css">
 <script src="lib/bootstrap/js/ng-tags-input.min.js"></script>
