changes in header ui

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -33,11 +33,12 @@
 <link href="lib/utility/css/font-awesome.css" rel="stylesheet"
 	type="text/css">
 <link href="lib/utility/css/docs.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Font+Name">
 <script type="text/javascript" src="lib/utility/js/docs.js"></script>
 
 </head>
 
-<body ng-app="myApp">
+<body ng-app="myApp" >
 	<div ng-controller="myContoler">
 
 		<div class="navbar navbar-fixed-top">
@@ -48,7 +49,7 @@
 					<div class="custom-header">
 						<a class="logoheader" href="login.html"><img align="left"
 							src="static/images/osi.png" alt="Nisum Technologies" width="70"
-							height="60" title="Nisum Technologies" id="logo" /></a>
+							height="60" style="border: 3px solid white; title="Nisum Technologies" id="logo" /></a>
 					</div>
 					<h1 class="nameheader"> OSI Recruitment Portal </h1>
 
