--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -3,22 +3,37 @@
 
 		<div class="container">
 			<div class="custom-header">
-				<a class="logoheader" href="index.html"><img align="left"
+				<a class="logoheader" href="main.html"><img align="left"
 					src="static/images/osi.png" alt="Nisum Technologies" width="70"
-					height="60" title="Nisum Technologies" id="logo" /> </a><br> <br>
+							height="60" style="border: 3px solid white;" title="Nisum Technologies" id="logo" /> </a><br> <br>
 				<br>
-				<h1 class="nameheader"> OSI Recruitment Portal</h1>
+				<h1 class="nameheader">OSI Recruitment Portal</h1>
 				<div class="nav-collapse">
 					<ul class="nav pull-right">
-						<li class="dropdown"><b class="acc"><a href="" class="dropdown-toggle" 
-							data-toggle="dropdown" style="text-decoration: none;" ><i class="glyphicon glyphicon-user"></i>&nbsp;Account
-							<b class="caret"></b></a>
-							<ul class="dropdown-menu">
-								<li><a href="javascript:;"><i class="glyphicon glyphicon-user"></i>&nbsp;&nbsp;Profile</a></li>
-								<li><a href="logout.html"><i class="glyphicon glyphicon-off"></i>&nbsp;&nbsp;Logout</a></li>
-							</ul></b></li>
+						<li style="float: left" class="dropdown"><b class="acc"><a
+								href="" class="dropdown-toggle" data-toggle="dropdown"><i
+									class="icon-bell"></i> <span class="badge badge-default"
+									style="background-color: #FB5557;position: relative;top:-10px;"> 3 </span> </a>
+								<ul class="dropdown-menu">
+									<a href="#" class="notification" style="text-decoration: none;">View
+										All</a>
+									<li><a>notification 1</a></li>
+									<li><a>notification 2</a></li>
+									<li><a>notification 3</a></li>
+								</ul></b></li>
+						<li style="float: left" class="dropdown"><b class="acc"><a
+								href="" class="dropdown-toggle" data-toggle="dropdown"
+								style="text-decoration: none;"><i
+									class="glyphicon glyphicon-user"></i>&nbsp;Account <b
+									class="caret"></b></a>
+								<ul class="dropdown-menu">
+									<li><a href="javascript:;"><i
+											class="glyphicon glyphicon-user"></i>&nbsp;&nbsp;Profile</a></li>
+									<li><a href="logout.html"><i
+											class="glyphicon glyphicon-off"></i>&nbsp;&nbsp;Logout</a></li>
+								</ul></b></li>
 					</ul>
-					
+
 				</div>
 			</div>
 
@@ -30,41 +45,27 @@
 </div>
 
 <!-- /navbar -->
-<div class="subnavbar">
-	<div class="subnavbar-inner">
-		<div class="container">
-			<ul class="mainnav">
-				<li class="active"><a ui-sref="main"><i
-						class="icon-dashboard"></i><span>Dashboard</span> </a></li>
-				<li><a href="#"><i class="icon-list-alt"></i><span>Reports</span>
-				</a></li>
-				<li><a href="#"><i class="icon-bar-chart"></i><span>Charts</span>
-				</a></li>
-				<li><a ui-sref="searchPosition"><i class="icon-bar-chart"></i><span>Position</span>
-				</a></li>
-				<li><a ui-sref="searchProfile"><span
-						style="margin-top: 15px;" class="glyphicon glyphicon-user"></span>
-						<p style="margin-top: 5px;">Profile</p></a></li>
-				<!-- <li><a href="profile.html"><i class="icon-bar-chart"></i><span>Profile</span> </a> </li> -->
-				<li><a href=""><i class="icon-bar-chart"></i><span>User</span>
-				</a></li>
-				<li><a href=""><span
-						style="margin-top: 15px;" class="glyphicon glyphicon-phone-alt"></span>
-						<p style="margin-top: 5px;">Interview</p></a></li>
-				<!-- <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-long-arrow-down"></i><span>Drops</span> <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="icons.html">Icons</a></li>
-            <li><a href="faq.html">FAQ</a></li>
-            <li><a href="pricing.html">Pricing Plans</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="signup.html">Signup</a></li>
-            <li><a href="error.html">404</a></li>
-          </ul>
-        </li> -->
-			</ul>
-		</div>
-		<!-- /container -->
-	</div>
-	<!-- /subnavbar-inner -->
+<product-tabs>
+<div class="nav-tab">
+	<section>
+		<ul class="nav nav-tabs">
+			<li ng-class="{ active:tab.isSet(1) }"><a href="#main"
+				ng-click="tab.setTab(1)"><i class="glyphicon glyphicon-home"></i><span>&nbsp;&nbsp;Dashboard</span>
+			</a></li>
+			<!-- <li ng-class="{ active:tab.isSet(2) }"><a href
+				ng-click="tab.setTab(2)" ><i class="glyphicon glyphicon-list-alt"></i><span>&nbsp;&nbsp;Reports</span></a></li>
+			<li ng-class="{ active:tab.isSet(3) }"><a href
+				ng-click="tab.setTab(3)"><i class="glyphicon glyphicon-signal"></i><span>&nbsp;&nbsp;Charts</span></a></li> -->
+			<li ng-class="{ active:tab.isSet(4) }"><a href="#searchPosition"
+				ng-click="tab.setTab(4)" ><i class="glyphicon glyphicon-list"></i><span>&nbsp;&nbsp;Position</span></a></li>
+			<li ng-class="{ active:tab.isSet(5) }"><a href="#searchProfile"
+				ng-click="tab.setTab(5)" ><i class="glyphicon glyphicon-file"></i><span>&nbsp;&nbsp;Profile</span></a></li>
+			<!-- <li ng-class="{ active:tab.isSet(6) }"><a href
+				ng-click="tab.setTab(6)"><i class="glyphicon glyphicon-user"></i><span>&nbsp;&nbsp;User</span></a></li> -->
+			<li ng-class="{ active:tab.isSet(7) }"><a href
+				ng-click="tab.setTab(7)"><i
+					class="glyphicon glyphicon-phone-alt"></i><span>&nbsp;&nbsp;Interview</span></a></li>
+		</ul>
+	</section>
 </div>
-<!-- /subnavbar -->
+</product-tabs>
