change in viewProfile

--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -30,6 +30,11 @@
 <link rel="stylesheet" type="text/css" href="lib/angular/css/ng-tags-input.min.css">
 <script src="lib/bootstrap/js/ng-tags-input.min.js"></script>
 <link href="static/css/home.css" rel="stylesheet">
+
+<script type="text/javascript" src="lib/angular/js/angular-mocks.js"></script>
+<link href="lib/angular-xeditable/css/xeditable.css" rel="stylesheet">
+<script src="lib/angular-xeditable/js/xeditable.js"></script>
+
 <!-- <link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600"
         rel="stylesheet"> -->
 <link href="lib/bootstrap/font/font-awesome.css" rel="stylesheet">
