--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -62,7 +62,7 @@
 				ng-click="tab.setTab(5)" ><i class="glyphicon glyphicon-file"></i><span>&nbsp;&nbsp;Profile</span></a></li>
 			<!-- <li ng-class="{ active:tab.isSet(6) }"><a href
 				ng-click="tab.setTab(6)"><i class="glyphicon glyphicon-user"></i><span>&nbsp;&nbsp;User</span></a></li> -->
-			<li ng-class="{ active:tab.isSet(7) }"><a href
+			<li ng-class="{ active:tab.isSet(7) }"><a href ="#interviewManagement"
 				ng-click="tab.setTab(7)"><i
 					class="glyphicon glyphicon-phone-alt"></i><span>&nbsp;&nbsp;Interview</span></a></li>
 		</ul>
