--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -18,8 +18,9 @@
 <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="lib/angular/css/ng-grid.css" />
 <link href="lib/angular/css/angular-block-ui.min.css" rel="stylesheet">
-<link href="lib/xeditable/css/xeditable.css" rel="stylesheet">
-<script src="lib/xeditable/js/xeditable.js"></script>
+<link href="lib/angular-xeditable/css/xeditable.css" rel="stylesheet">
+<script src="lib/angular-xeditable/js/xeditable.min.js"></script>
+<script src="lib/angular-xeditable/js/xeditable.min.js"></script>
 <script src="lib/angular/js/angular-route.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/profile/searchProfile.js"></script>
