changes in header

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -51,7 +51,7 @@
 							src="static/images/osi.png" alt="Nisum Technologies" width="70"
 							height="60" style="border: 3px solid white; title="Nisum Technologies" id="logo" /></a>
 					</div>
-					<h1 class="nameheader"> OSI Recruitment Portal </h1>
+					<h1 class="nameheader"> Recruitment Portal </h1>
 
 				</div>
 				<!-- /container -->
