--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -5,15 +5,16 @@
 			<div class="custom-header">
 				<a class="logoheader" href="main.html"><img align="left"
 					src="static/images/osi.png" alt="Nisum Technologies" width="70"
-							height="60" style="border: 3px solid white;" title="Nisum Technologies" id="logo" /> </a><br> <br>
-				<br>
-				<h1 class="nameheader">OSI Recruitment Portal</h1>
+					height="60" style="border: 3px solid white;"
+					title="Nisum Technologies" id="logo" /> </a><br> <br> <br>
+				<h1 class="nameheader">Recruitment Portal</h1>
 				<div class="nav-collapse">
 					<ul class="nav pull-right">
 						<li style="float: left" class="dropdown"><b class="acc"><a
 								href="" class="dropdown-toggle" data-toggle="dropdown"><i
 									class="icon-bell"></i> <span class="badge badge-default"
-									style="background-color: #FB5557;position: relative;top:-10px;"> 3 </span> </a>
+									style="background-color: #FB5557; position: relative; top: -10px;">
+										3 </span> </a>
 								<ul class="dropdown-menu">
 									<a href="#" class="notification" style="text-decoration: none;">View
 										All</a>
@@ -40,32 +41,33 @@
 
 		</div>
 		<!-- /container -->
-
+		<product-tabs>
+		
+			<section>
+				<ul class="nav nav-tabs">
+					<li ng-class="{ active:tab.isSet(1) }"><a href="#main"
+						ng-click="tab.setTab(1)"><i class="glyphicon glyphicon-home"></i><span>&nbsp;&nbsp;Dashboard</span>
+					</a></li>
+					<!-- <li ng-class="{ active:tab.isSet(2) }"><a href
+				ng-click="tab.setTab(2)" ><i class="glyphicon glyphicon-list-alt"></i><span>&nbsp;&nbsp;Reports</span></a></li>
+			<li ng-class="{ active:tab.isSet(3) }"><a href
+				ng-click="tab.setTab(3)"><i class="glyphicon glyphicon-signal"></i><span>&nbsp;&nbsp;Charts</span></a></li> -->
+					<li ng-class="{ active:tab.isSet(4) }"><a
+						href="#searchPosition" ng-click="tab.setTab(4)"><i
+							class="glyphicon glyphicon-list"></i><span>&nbsp;&nbsp;Position</span></a></li>
+					<li ng-class="{ active:tab.isSet(5) }"><a
+						href="#searchProfile" ng-click="tab.setTab(5)"><i
+							class="glyphicon glyphicon-file"></i><span>&nbsp;&nbsp;Profile</span></a></li>
+					<!-- <li ng-class="{ active:tab.isSet(6) }"><a href
+				ng-click="tab.setTab(6)"><i class="glyphicon glyphicon-user"></i><span>&nbsp;&nbsp;User</span></a></li> -->
+					<li ng-class="{ active:tab.isSet(7) }"><a
+						href="#interviewManagement" ng-click="tab.setTab(7)"><i
+							class="glyphicon glyphicon-phone-alt"></i><span>&nbsp;&nbsp;Interview</span></a></li>
+				</ul>
+			</section>
+		
+		</product-tabs>
 	</div>
 </div>
 
 <!-- /navbar -->
-<product-tabs>
-<div class="nav-tab">
-	<section>
-		<ul class="nav nav-tabs">
-			<li ng-class="{ active:tab.isSet(1) }"><a href="#main"
-				ng-click="tab.setTab(1)"><i class="glyphicon glyphicon-home"></i><span>&nbsp;&nbsp;Dashboard</span>
-			</a></li>
-			<!-- <li ng-class="{ active:tab.isSet(2) }"><a href
-				ng-click="tab.setTab(2)" ><i class="glyphicon glyphicon-list-alt"></i><span>&nbsp;&nbsp;Reports</span></a></li>
-			<li ng-class="{ active:tab.isSet(3) }"><a href
-				ng-click="tab.setTab(3)"><i class="glyphicon glyphicon-signal"></i><span>&nbsp;&nbsp;Charts</span></a></li> -->
-			<li ng-class="{ active:tab.isSet(4) }"><a href="#searchPosition"
-				ng-click="tab.setTab(4)" ><i class="glyphicon glyphicon-list"></i><span>&nbsp;&nbsp;Position</span></a></li>
-			<li ng-class="{ active:tab.isSet(5) }"><a href="#searchProfile"
-				ng-click="tab.setTab(5)" ><i class="glyphicon glyphicon-file"></i><span>&nbsp;&nbsp;Profile</span></a></li>
-			<!-- <li ng-class="{ active:tab.isSet(6) }"><a href
-				ng-click="tab.setTab(6)"><i class="glyphicon glyphicon-user"></i><span>&nbsp;&nbsp;User</span></a></li> -->
-			<li ng-class="{ active:tab.isSet(7) }"><a href ="#interviewManagement"
-				ng-click="tab.setTab(7)"><i
-					class="glyphicon glyphicon-phone-alt"></i><span>&nbsp;&nbsp;Interview</span></a></li>
-		</ul>
-	</section>
-</div>
-</product-tabs>
