--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -7,15 +7,18 @@
 <script src="lib/angular/js/angular.min.js"></script>
 <script src="lib/angular/js/angular-file-upload-shim.min.js"></script>
 <script src="lib/angular/js/angular-file-upload.js"></script>
-<script src="lib/angular/js/angular-ui-router.min.js">
+<script src="lib/angular/js/angular-ui-router.min.js" />
 <script src="lib/angular/js/ng-grid-1.3.2.js"></script>
 <script src="lib/utility/js/jquery-1.11.2.min.js"></script>
 <script src="js/masks.js"></script>
 <script src="lib/angular/js/angular-block-ui.min.js"></script>
 <script src="lib/bootstrap/js/bootstrap.js"></script>
+<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<script src="lib/utility/js/moment.js"></script>
+<script src="lib/angular/js/datetimepicker.js"></script>
+<link href="lib/angular/css/datetimepicker.css" rel="stylesheet">
 <script src="lib/angular/js/ng-grid.debug.js"></script>
 <!-- <script src="lib/angular/js/ng-grid-flexible-height.js"></script> -->
-<link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="lib/angular/css/ng-grid.css" />
 <link href="lib/angular/css/angular-block-ui.min.css" rel="stylesheet">
 <link href="lib/angular-xeditable/css/xeditable.css" rel="stylesheet">
