--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -7,7 +7,10 @@
 <script src="lib/angular/js/angular.min.js"></script>
 <script src="lib/angular/js/angular-file-upload-shim.min.js"></script>
 <script src="lib/angular/js/angular-file-upload.js"></script>
-<script src="lib/angular/js/angular-ui-router.min.js" />
+<script src="lib/angular/js/angular-ui-router.min.js"></script>
+<script src="lib/utility/js/select.js"></script>
+<link rel="stylesheet" href="lib/utility/css/select2.css">
+<link rel="stylesheet" href="lib/utility/css/selectize.default.css">
 <script src="lib/angular/js/ng-grid-1.3.2.js"></script>
 <script src="lib/utility/js/jquery-1.11.2.min.js"></script>
 <script src="js/masks.js"></script>
@@ -20,10 +23,11 @@
 <script src="lib/angular/js/ng-grid.debug.js"></script>
 <!-- <script src="lib/angular/js/ng-grid-flexible-height.js"></script> -->
 <link rel="stylesheet" href="lib/angular/css/ng-grid.css" />
+<link href="lib/utility/css/select.css" rel="stylesheet">
 <link href="lib/angular/css/angular-block-ui.min.css" rel="stylesheet">
 <link href="lib/angular-xeditable/css/xeditable.css" rel="stylesheet">
 <script src="lib/angular-xeditable/js/xeditable.min.js"></script>
-<script src="lib/angular-xeditable/js/xeditable.min.js"></script>
+<script src="lib/angular-xeditable/js/xeditable.js"></script>
 <script src="lib/angular/js/angular-route.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 <script type="text/javascript" src="js/profile/searchProfile.js"></script>
