changes in header

--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -8,64 +8,62 @@
 					height="60" style="border: 3px solid white;"
 					title="Nisum Technologies" id="logo" /> </a><br> <br> <br>
 				<h1 class="nameheader">Recruitment Portal</h1>
-				<div class="nav-collapse">
-					<ul class="nav pull-right">
-						<li style="float: left" class="dropdown"><b class="acc"><a
-								href="" class="dropdown-toggle" data-toggle="dropdown"><i
-									class="icon-bell"></i> <span class="badge badge-default"
-									style="background-color: #FB5557; position: relative; top: -10px;">
-										3 </span> </a>
-								<ul class="dropdown-menu">
-									<a href="#" class="notification" style="text-decoration: none;">View
-										All</a>
-									<li><a>notification 1</a></li>
-									<li><a>notification 2</a></li>
-									<li><a>notification 3</a></li>
-								</ul></b></li>
-						<li style="float: left" class="dropdown"><b class="acc"><a
-								href="" class="dropdown-toggle" data-toggle="dropdown"
-								style="text-decoration: none;"><i
-									class="glyphicon glyphicon-user"></i>&nbsp;Account <b
-									class="caret"></b></a>
-								<ul class="dropdown-menu">
-									<li><a href="javascript:;"><i
-											class="glyphicon glyphicon-user"></i>&nbsp;&nbsp;Profile</a></li>
-									<li><a href="logout.html"><i
-											class="glyphicon glyphicon-off"></i>&nbsp;&nbsp;Logout</a></li>
-								</ul></b></li>
-					</ul>
-
-				</div>
 			</div>
 
 
 		</div>
 		<!-- /container -->
 		<product-tabs>
-		
-			<section>
-				<ul class="nav nav-tabs">
-					<li ng-class="{ active:tab.isSet(1) }"><a href="#main"
-						ng-click="tab.setTab(1)"><i class="glyphicon glyphicon-home"></i><span>&nbsp;&nbsp;Dashboard</span>
-					</a></li>
-					<!-- <li ng-class="{ active:tab.isSet(2) }"><a href
+
+		<section>
+			<ul class="nav nav-tabs">
+				<li ng-class="{ active:tab.isSet(1) }"><a href="#main"
+					ng-click="tab.setTab(1)"><i class="glyphicon glyphicon-home"></i><span>&nbsp;&nbsp;Dashboard</span>
+				</a></li>
+				<!-- <li ng-class="{ active:tab.isSet(2) }"><a href
 				ng-click="tab.setTab(2)" ><i class="glyphicon glyphicon-list-alt"></i><span>&nbsp;&nbsp;Reports</span></a></li>
 			<li ng-class="{ active:tab.isSet(3) }"><a href
 				ng-click="tab.setTab(3)"><i class="glyphicon glyphicon-signal"></i><span>&nbsp;&nbsp;Charts</span></a></li> -->
-					<li ng-class="{ active:tab.isSet(4) }"><a
-						href="#searchPosition" ng-click="tab.setTab(4)"><i
-							class="glyphicon glyphicon-list"></i><span>&nbsp;&nbsp;Position</span></a></li>
-					<li ng-class="{ active:tab.isSet(5) }"><a
-						href="#searchProfile" ng-click="tab.setTab(5)"><i
-							class="glyphicon glyphicon-file"></i><span>&nbsp;&nbsp;Profile</span></a></li>
-					<!-- <li ng-class="{ active:tab.isSet(6) }"><a href
+				<li ng-class="{ active:tab.isSet(4) }"><a
+					href="#searchPosition" ng-click="tab.setTab(4)"><i
+						class="glyphicon glyphicon-list"></i><span>&nbsp;&nbsp;Position</span></a></li>
+				<li ng-class="{ active:tab.isSet(5) }"><a href="#searchProfile"
+					ng-click="tab.setTab(5)"><i class="glyphicon glyphicon-file"></i><span>&nbsp;&nbsp;Profile</span></a></li>
+				<!-- <li ng-class="{ active:tab.isSet(6) }"><a href
 				ng-click="tab.setTab(6)"><i class="glyphicon glyphicon-user"></i><span>&nbsp;&nbsp;User</span></a></li> -->
-					<li ng-class="{ active:tab.isSet(7) }"><a
-						href="#interviewManagement" ng-click="tab.setTab(7)"><i
-							class="glyphicon glyphicon-phone-alt"></i><span>&nbsp;&nbsp;Interview</span></a></li>
-				</ul>
-			</section>
-		
+				<li ng-class="{ active:tab.isSet(7) }"><a
+					href="#interviewManagement" ng-click="tab.setTab(7)"><i
+						class="glyphicon glyphicon-phone-alt"></i><span>&nbsp;&nbsp;Interview</span></a></li>
+				<li style="float: right" class="dropdown"><b
+					style="position: relative; bottom: -20px;"><a href=""
+						class="dropdown-toggle" data-toggle="dropdown"
+						style="text-decoration: none;"><i
+							class="glyphicon glyphicon-user"></i>&nbsp;Account <b
+							class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="javascript:;"><i
+									class="glyphicon glyphicon-user"></i>&nbsp;&nbsp;Profile</a></li>
+							<li><a href="logout.html"><i
+									class="glyphicon glyphicon-off"></i>&nbsp;&nbsp;Logout</a></li>
+						</ul></b></li>
+				<li style="float: right" class="dropdown"><b
+					style="position: relative; bottom: -20px;"><a
+						href="
+					" class="dropdown-toggle" data-toggle="dropdown"><i
+						class="icon-bell"></i> <span class="badge badge-default"
+						style="background-color: #FB5557; position: relative; top: -10px;">
+							3 </span> </a>
+						<ul class="dropdown-menu">
+							<a href="#" class="notification" style="text-decoration: none;">View
+								All</a>
+							<li><a>notification 1</a></li>
+							<li><a>notification 2</a></li>
+							<li><a>notification 3</a></li>
+						</ul></b></li>
+			</ul>
+
+		</section>
+
 		</product-tabs>
 	</div>
 </div>
